# MonthlyReportBuilder

./: .gitignore  CM월간보고서_AI자동취합앱_PRD.md
client/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
client/src/: App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs  mdns.rs
client/tests/: ProfileActions.test.tsx  RetryableError.test.tsx  Toast.test.tsx  connectionStore.test.ts  errorMessages.test.ts  (+4 more)
docs/: development-plan.md  installation-guide.md
installer/: README.md  build-server-only.bat  build.bat  server.spec  setup-build-env.bat  setup.iss
server/: alembic.ini  cm-report-server.spec  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20250101_000000_0001_create_settings_profile_table.py
server/app/: main.py
server/app/core/: auth.py  database.py  error_handlers.py  exceptions.py  mdns_advertiser.py  server_identity.py
server/app/models/: __init__.py  settings_profile.py
server/app/repositories/: __init__.py  profile_repository.py
server/app/routers/: profile_router.py
server/app/schemas/: profile.py
server/app/services/: profile_service.py
server/tests/: test_auth.py  test_database.py  test_error_handlers.py  test_integration_flow.py  test_main.py  test_mdns_advertiser.py  test_profile_repository.py  test_profile_router.py  test_profile_router_actions.py  test_profile_service.py  test_profile_service_copy_default.py  test_profile_service_export_import.py  test_properties.py  test_requirements_unit.py  test_schemas.py  test_server_identity.py
(+98 files in other folders)
