[project]
name = "cm-report-server"
version = "0.1.0"
description = "CM Monthly Report Builder - Server Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "sqlalchemy[asyncio]==2.0.41",
    "aiosqlite==0.21.0",
    "pydantic==2.11.3",
    "alembic==1.15.2",
    "zeroconf==0.146.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "hypothesis==6.131.15",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
